--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -4,9 +4,10 @@ services:
   db:
     image: postgres
     ports:
-            - "5432:5432"
+      - "5432:5432"
     environment:
-            POSTGRES_PASSWORD: postgres
+      POSTGRES_PASSWORD: postgres
+
   web:
     build: .
     command: gunicorn config.wsgi:application --bind 0.0.0.0:8000
@@ -16,3 +17,10 @@ services:
       - "8000:8000"
     depends_on:
       - db
+
+  nginx:
+    build: ./nginx
+    ports:
+      - 80:80
+    depends_on:
+      - web
