--- a/nginx/nginx.conf
+++ b/nginx/nginx.conf
@@ -6,7 +6,7 @@ server {
     listen 80;
  
     location / {
-        proxy_pass http://0.0.0.0:8000;
+        proxy_pass https://qanav.herokuapp.com/;
         proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
         proxy_set_header Host $host;
         proxy_redirect off;
